@@ -70,7 +70,7 @@ CREATE TABLE CMCHAR (
 	CMATTA integer NULL,
 	CMAMOR integer NULL,
 	CMDAMG integer NULL,
-	CMBTMP integer NULL,
+	CMBTMP Double NULL,
 	CMLEIG varchar (50) NULL,
 	CMHEIT integer NULL,
 	CMWEIT integer NULL,
