@@ -173,7 +173,7 @@ CREATE TABLE CMCHAR (
 	CMATTA int NULL ,
 	CMAMOR int NULL ,
 	CMDAMG int NULL ,
-	CMBTMP int NULL ,
+	CMBTMP number(20) NULL ,
 	CMLEIG char (50) NULL ,
 	CMHEIT int NULL ,
 	CMWEIT int NULL ,
