@@ -274,6 +274,15 @@ Short(s): aaf\n\r\
 List the skills or other auto-invoked affects that your character is currently \
 under the influence of.
 
+AUTOATTACK=\
+Command : AUTOATTACK\n\r\
+Usage   : AUTOATTACK (ON/OFF)\n\r\
+Example : autoattack\n\r\
+Example : autoattack off\n\r\
+Short(s): \n\r\
+Toggles whether or not you automatically attack an enemy combatant \
+every round.  This is turned on by default, and should be toggled with care.
+
 AUTOGOLD=\
 Command : AUTOGOLD\n\r\
 Usage   : AUTOGOLD (ON/OFF)\n\r\
