@@ -67,6 +67,7 @@ AUTOGOLD=Automatically loot gold from corpses you kill.\n\r\
 AUTOGUARD=Stay in one place even when you're a follower in a group.\n\r\
 AUTOIMPROVEMENT=Skill/spell proficiency notifications when they occur.\n\r\
 AUTOLOOT=Automatically loot items from corpses you kill.\n\r\
+AUTOATTACK=Attack enemies automatically every round*.\n\r\
 AUTOMELEE=Advance at combatants too far away for your wielded weapon.\n\r\
 AUTONOTIFY=See when members of your FRIENDS list log on.\n\r\
 AUTORUN=Always try to run when moving from room to room.\n\r\
