@@ -1,4 +1,5 @@
 # Build 5.10.4 Release ??/??/2024
+  *  DATABASE CHANGED! (Bitmap field in player table is now larger)
   1. Races/GenRaces support parameters for cultural abilities.
   2. Better MSSP/MSDP support.  New INI entry: MSXPVARS.
   3. Ability CODES & DOMAINS can now be added to via the INI file/control panel.
@@ -28,6 +29,7 @@
  27. SCORE command has more arguments for narrowing the results.
  28. Prop_ItemNoRuin can now be used to Always ruin an item.
  29. Class Skills, including All Qualifys, now support expertises as requirements.
+ 30. New Command "AutoAttack" for toggling auto attack.   Also available in Config.
 
 # Build 5.10.3 Release 01/01/2024
   *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
